// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<label>
  Label
  :
  <input
    data-testid="default-input"
    id="default"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Render properties.label - value[0] 1`] = `
<label>
  Input Foo Label
  :
  <input
    data-testid="properties.label-input"
    id="properties.label"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Render required = true default - value[0] 1`] = `
<label>
  Label
  :
  <input
    data-testid="default-input"
    id="default"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Render required = true properties.label - value[0] 1`] = `
<label>
  Input Foo Label
  :
  <input
    data-testid="properties.label-input"
    id="properties.label"
    onChange={[Function]}
    value=""
  />
</label>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.label 1`] = `true`;

exports[`Test Schema properties.label 2`] = `null`;
